2014-07-05  KwangHyuk Kim  <hyuki.kim@samsung.com>

        [EFL] Add libgeoclue-dev to Tools/efl/install-dependencies.
        https://bugs.webkit.org/show_bug.cgi?id=134648

        Reviewed by Gyuyoung Kim.

        As Geoclue is enabled for EFL, libgeoclue-dev is also added to Tools/efl/install-dependencies.

        * efl/install-dependencies:

2014-07-04  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

        [EFL] Support Geolocation
        https://bugs.webkit.org/show_bug.cgi?id=134439

        Reviewed by Antonio Gomes.

        * Scripts/webkitperl/FeatureList.pm: Enable geolocation for EFL port.

2014-07-04  Shivakumar JM  <shiva.jm@samsung.com>

        [EFL][WK2] Enhance the Minibrowser to show selected/highlighted text in search bar, if any.
        https://bugs.webkit.org/show_bug.cgi?id=134485

        Reviewed by Gyuyoung Kim.

        Use script_execute_callback to get selected/highlighted text and show in search bar.

        * MiniBrowser/efl/main.c:
        (script_execute_callback):
        (on_key_down):

2014-07-04  Dan Bernstein  <mitz@apple.com>

        Build fix after r170811.

        * MiniBrowser/mac/WK2BrowserWindowController.m:
        (-[WK2BrowserWindowController reload:]):

2014-07-04  Timothy Horton  <timothy_horton@apple.com>

        Typo in watchlist config means four specific people get Cc'd on everything
        https://bugs.webkit.org/show_bug.cgi?id=134626

        Reviewed by Gyuyoung Kim.

        * Scripts/webkitpy/common/config/watchlist:
        Remove leading pipe, which meant that this rule matched everything!

2014-07-03  Shivakumar JM  <shiva.jm@samsung.com>

        [EFL][WK2] Enhance the Minibrowser to show text search count and close search bar.
        https://bugs.webkit.org/show_bug.cgi?id=134486

        Reviewed by Gyuyoung Kim.

        Use on_search_close_button_clicked() callback to close search bar and on_search_text_found() callback to show search count.

        * MiniBrowser/efl/main.c: